<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewdip"
                android:background="@color/secendcolor"
                >
            </View>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f5f5f5"
                android:orientation="horizontal"
                android:weightSum="5" >

                <RadioButton
                    android:id="@+id/home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#f5f5f5"
                    android:button="@null"
                    android:drawableTop="@drawable/tabhome_image"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/tab_home"
                    android:checked="true"
                    android:textColor="@drawable/hometab_textcolor"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/course_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/tabexposure_image"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/tab_exposuer"
                    android:textColor="@drawable/hometab_textcolor"
                    android:textSize="12sp" />

                <RadioButton
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/tabexposure_image"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/tab_exposuer"
                    android:textColor="@drawable/hometab_textcolor"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/space_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/tabmessage_image"
                    android:button="@null"
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:text="@string/tab_message"
                    android:textColor="@drawable/hometab_textcolor"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/my_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/tabpersonal_image"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/tab_personal"
                    android:textColor="@drawable/hometab_textcolor"
                    android:textSize="12sp" />

            </RadioGroup>

        </LinearLayout>

        <ImageView
            android:src="@drawable/send_add"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>




</LinearLayout>